Contribution stack is a list (newest read in O(1))